copied conclusions from readme to report

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -469,6 +469,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Out of the 15 schools, 7 of them are public district schools and the rest charter schools.\n",
+    "\n",
+    "The analysis performed within this report intends to breakdown the grade percentages by the following: \n",
+    "\n",
+    ">  By district\n",
+    ">  By school grades (9th, 10th, 11th, 12th)\n",
+    ">  By per student budget \n",
+    ">  By school size\n",
+    ">  By school type (Charter or District)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### *School Summary Calculations*"
    ]
   },
@@ -4258,6 +4274,40 @@
    ],
    "source": [
     "Summary_type_budget"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions and Observations\n",
+    "\n",
+    "##### Observation 1:\n",
+    "> It might be problematic to conclude that more or less spending has a definitive correlation on the scores for specific subject areas.\n",
+    "\n",
+    "Across ABC's 15 schools,  the only trendline that can be observed is that the more expenditure per student, the signficantly lower the average score and passing **math grades** are, as well as the overall passing grade percentage. \n",
+    "\n",
+    "As the baseline commments mentioned, it could be due to smaller class sizes, but it could also be due to demographic and/or socioeconomic factors that are not considered in this dataset. For example, housing vulnerablility, nutrition, among other factors.\n",
+    "\n",
+    "Although one could conclude that Charter Schools outperforms District Schools, one could argue that it is *mostly* true for the subject of Math, not reading. Charter Schools average and mantain a constant B- across the highschool years, while District Schools showcase a C and/or C+ through the same grade levels. \n",
+    "\n",
+    "\n",
+    "##### Observation 2: \n",
+    "> There seems to be a the sweet spot for school student count size and the overall passing grade percentage\n",
+    "\n",
+    "The best ranked District school sits as the mode between all 15 District's ABC schools. The delta between the overall passing average percentage is the interesting data point. \n",
+    "\n",
+    "At rank 8/15, Bailey Highschool is a district school with 4976 students, and a passing rate of 54.6%. ($628 per student)\n",
+    "\n",
+    "At rank 7/15, Holden Highschool is a charter school with 427 students, and a passing rate of 89.2% ($581 per student)\n",
+    "\n",
+    "This large gap between district and charter (D- / B+) begs to consider that there might be a overall passing grade weight to be considered depending on the size of the class. \n",
+    "\n",
+    "Similar to the building to land or Floor to Area Ratio (FAR), there might be somehting similar to be considered for schools when it comes to comparing grades - similar to a grading scale. \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
